--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -425,7 +425,16 @@ body {
 .milestone-message-no-date {
   color: #B5DEE1;
   font-size: 36px;
+  line-height: 42px;
   font-weight: bold;
+  border-top: 1px solid #ECECEC;
+  border-bottom: 1px solid #ECECEC;
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 16px;
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 .milestone-progress {
   width: 40px;
@@ -790,3 +799,4 @@ body {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+
