--- a/app/assets/javascripts/app/deadlines.js.coffee.erb
+++ b/app/assets/javascripts/app/deadlines.js.coffee.erb
@@ -29,23 +29,34 @@ $(document).on 'ready page:load', ->
   dueInSeconds = $wrapper.data('dueInSeconds')
   $night = $wrapper.find('.milestone-featured')
   secondsInDay = 24 * 3600
+  reaperUrl = "<%= asset_path('reaper.svg') %>"
+  nightSceneUrl = "<%= asset_path('scene-30.svg') %>"
+  console.log(reaperUrl)
 
   setOpacity = (opacity) ->
     console.log("setting the night!", opacity)
     $night.css('background-color', "rgba(90, 83, 98, #{opacity})")
+
+  setReaperHours = (hoursLeft) ->
+    # opacity = (1.0 / 24) * (24 - hoursLeft)
+    $night.css('background-image', "url(#{reaperUrl}), url(#{nightSceneUrl})")
+    final = 448
+    distance = 120
+    start = final + distance
+    pixelsPerHour = distance / 24
+    current = start - ((24 - Math.max(0, hoursLeft)) * pixelsPerHour)
+    console.log(hoursLeft, current)
+    $night.css('background-position', " 50% #{current}px, 50% 100%")
 
   updateNight = ->
     console.log(dueInSeconds)
     secondsLeft = dueInSeconds - (new Date().getTime() / 1000)
     console.log("seconds left", secondsLeft)
 
-    if secondsLeft <= 0 # project not yet overdue
-      setOpacity(1)
-      return
-
     hoursLeft = secondsLeft / 3600
     if hoursLeft <= 24 # project within a day of due date
-      # opacity = (1.0 / 24) * (24 - hoursLeft)
+      setReaperHours(hoursLeft)
+
       opacity = (1.0 / secondsInDay) * (secondsInDay - secondsLeft)
       setOpacity(opacity)
 
