--- a/app/views/deadlines/show.html.erb
+++ b/app/views/deadlines/show.html.erb
@@ -1,9 +1,4 @@
-<%= render 'deadlines/header', {
-  show_projects: page.internal?,
-  project: page.project,
-  deadline: page.deadline,
-  page: page
-} %>
+<%= render 'deadlines/header', { page: page } %>
 
 <% deadline = page.deadline %>
 
