--- a/app/views/projects/_header.html.erb
+++ b/app/views/projects/_header.html.erb
@@ -6,6 +6,8 @@
 
   <% if page.internal? %>
     <%= link_to "View projects", projects_path, class: "milestones-view-projects" %>
+  <% else %>
+    <%= link_to "Sign in", user_omniauth_authorize_path(:github), class: 'sign-in-github' %>
   <% end %>
 </div>
 
