Issue page deadline states

--- a/app/views/deadlines/show.html.erb
+++ b/app/views/deadlines/show.html.erb
@@ -2,23 +2,37 @@
 
 <% deadline = page.deadline %>
 
-<div class="issues-milestone-wrapper">
+<div class="issues-milestone-wrapper
+  <%= 'issues-milestone-completed-wrapper' if deadline.completed? %>
+  <%= 'issues-milestone-overdue-wrapper' if deadline.overdue? %>
+  ">
   <div class="issues-milestone">
     <h2 class="issues-milestone-name"><%= deadline.title %></h2>
-    <ul class="issues-milestone-countdown js-countdown-big" data-epoch-seconds="<%= page.deadline.due_on.to_i %>">
-      <li class="issues-milestone-interval">
-        <div class="issues-milestone-number js-countdown-days">00</div>
-        <div class="issues-milestone-label">days</div>
-      </li>
-      <li class="issues-milestone-interval">
-        <div class="issues-milestone-number js-countdown-hours">00</div>
-        <div class="issues-milestone-label">hours</div>
-      </li>
-      <li class="issues-milestone-interval">
-        <div class="issues-milestone-number js-countdown-minutes">00</div>
-        <div class="issues-milestone-label">minutes</div>
-      </li>
-    </ul>
+    <% if deadline.completed? %>
+      <div class="issues-milestone-message-completed">
+        <span>Completed</span>
+      </div>
+    <% elsif deadline.no_due_date? %>
+      <div class="issues-milestone-message-completed">
+        No due date
+      </div>
+    <% else %>
+      <% number_class = deadline.overdue? ? 'issues-milestone-number-overdue issues-milestone-number' : 'issues-milestone-number' %>
+      <ul class="issues-milestone-countdown js-countdown-big" data-epoch-seconds="<%= page.deadline.due_on.to_i %>">
+        <li class="issues-milestone-interval">
+          <div class="<%= number_class %> js-countdown-days">00</div>
+          <div class="issues-milestone-label">days</div>
+        </li>
+        <li class="issues-milestone-interval">
+          <div class="<%= number_class %> js-countdown-hours">00</div>
+          <div class="issues-milestone-label">hours</div>
+        </li>
+        <li class="issues-milestone-interval">
+          <div class="<%= number_class %> js-countdown-minutes">00</div>
+          <div class="issues-milestone-label">minutes</div>
+        </li>
+      </ul>
+    <% end %>
     <div class="milestones-overview">
       <%= page.link_to_project(self, page.project) do %>
         <span>Milestones overview</span>
