--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -508,6 +508,9 @@ body {
 .issues-milestone-completed-wrapper {
   background-color: #88C29D;
 }
+.issues-milestone-overdue-wrapper {
+  background-color: #5A5362 ;
+}
 .issues-milestone {
   text-align: center;
 }
@@ -528,6 +531,9 @@ body {
 
     .issues-milestone-number {
       color: #FFEF8D;
+      &.issues-milestone-number-overdue {
+        color: #EB9489;
+      }
     }
   }
   &:last-child {
@@ -539,6 +545,10 @@ body {
   line-height: 84px;
   font-family: $input_mono_narrow_bold;
 }
+.issues-milestone-number-overdue {
+  color: #EB9489;
+}
+
 .issues-milestone-label {
   font-size: 14px;
   margin-top: -14px;
