Tweaks with Stelian

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -358,7 +358,7 @@ body {
 }
 .milestone {
   background-color: #fff;
-  border: 4px solid #EDECE5;
+  // border: 4px solid #EDECE5;
   width: 320px;
   text-align: center;
   box-sizing: border-box;
@@ -367,11 +367,16 @@ body {
   margin-bottom: 40px;
 
   a {
+    border: 4px solid #EDECE5;
     display: block;
     text-decoration: none;
     width: 312px;
     padding-top: 18px;
     padding-bottom: 22px;
+
+    &:hover {
+      border-color: #DAD9D0;
+    }
   }
 }
 .milestone-name {
@@ -818,4 +823,25 @@ body {
   margin-right: auto;
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+.sign-in-github:hover {
+  background: #D28BAD image-url('github-logo.svg') no-repeat 18px 50%;
+  border: 2px solid #D28BAD ;
+}
+.see-a-demo:hover {
+  border: 2px solid #B8AEC3;
+}
+.milestones-view-projects,
+.issue-view-projects {
+  &:hover { color: #FFEF8D ; }
+}
+
+@media (-webkit-min-device-pixel-ratio: 2),
+(min-resolution: 192dpi) {
+
+  .site-header {
+    background: #7379B7  image-url('preview-retina.png') no-repeat 50% 100%;
+    background-size: 730px 360px;
+  }
 }
