--- a/app/views/layouts/simple.html.erb
+++ b/app/views/layouts/simple.html.erb
@@ -17,8 +17,7 @@
 
   <script type="text/javascript">
   var rumbleBannerBackgroundColor, rumbleBannerTextColor, rumbleBannerLinkColor, rumbleBannerPlacement;
-      rumbleBannerBackgroundColor = "#161616";
-      rumbleBannerBackgroundColor = "#333333";
+      rumbleBannerBackgroundColor = "#5A5362";
       rumbleBannerTextColor = "#b0b0b0";
       rumbleBannerLinkColor = "#ffffff";
       rumbleBannerPlacement = "bottom"; // Optionally replace with "bottom".
