No turbolinks, so meta tag gets parsed again on mobile

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,8 +4,14 @@
   </h1>
   <h2 class="definition">Turn Github milestones into fun countdowns</h2>
   <div class="call-to-action">
-    <%= link_to "Sign in", user_omniauth_authorize_path(:github), class: 'sign-in-github' %>
-    <%= link_to "See a demo", '/x/deadliner', class: 'see-a-demo' %>
+    <%= link_to "Sign in", user_omniauth_authorize_path(:github), {
+      class: 'sign-in-github',
+      data: { no_turbolink: true }
+    } %>
+  <%= link_to "See a demo", '/x/deadliner', {
+    class: 'see-a-demo',
+    data: { no_turbolink: true }
+  } %>
   </div>
 </div>
 
@@ -36,8 +42,14 @@
   <div class="give-it-a-try">
     <h2>Give it a try</h2>
     <div class="call-to-action">
-      <%= link_to "Sign in", user_omniauth_authorize_path(:github), class: 'sign-in-github' %>
-      <%= link_to "See a demo", '#', class: 'see-a-demo-alt' %>
+      <%= link_to "Sign in", user_omniauth_authorize_path(:github), {
+        class: 'sign-in-github',
+        data: { no_turbolink: true }
+      } %>
+      <%= link_to "See a demo", '/x/deadliner', {
+        class: 'see-a-demo-alt',
+        data: { no_turbolink: true }
+      } %>
     </div>
   </div>
 
