--- a/app/views/dashboards/_password_form.html.erb
+++ b/app/views/dashboards/_password_form.html.erb
@@ -10,7 +10,7 @@
     <% end %>
   </p>
 
-  <p>
+  <p class="text-right">
     <%= link_to "Cancel", projects_path, class: "btn default" %>
     <%= f.submit class: 'btn primary' %>
   </p>
