--- a/app/views/dashboards/_form.html.erb
+++ b/app/views/dashboards/_form.html.erb
@@ -1,10 +1,10 @@
 <%= simple_form_for dashboard, html: {id: 'general-form'} do |f| %>
-  <%= f.input :project_uid, disabled: true %>
+  <%= f.input :project_uid, label: "Project: ", disabled: true %>
   <%= f.input :slug, label: "URL: #{root_url}x/" %>
   <%= f.input :show_tasks %>
   <%= f.input :published %>
 
-  <p class="text-left">
+  <p class="text-right actions">
     <%= link_to "Cancel", projects_path, class: "btn default" %>
     <%= f.submit class: 'btn primary' %>
   </p>
