--- a/app/assets/stylesheets/components/_flashes.scss
+++ b/app/assets/stylesheets/components/_flashes.scss
@@ -1,22 +1,27 @@
 .flash {
   margin: 5px auto;
-  max-width: 1000px;
+  max-width: 520px;
   padding: 10px;
+  text-align: center;
+  background-color: #F8F7F2;
 }
 
 .flash-notice {
   @extend .flash;
-  $color: #039;
-  color: $color;
-  border: 1px solid lighten($color, 30%);
-  background: lighten($color, 60%);
+  /*$color: #039;*/
+  /*color: $color;*/
+  // border: 1px solid lighten($color, 30%);
+  color: #333;
 }
 
 .flash-alert {
   @extend .flash;
   $color: #900;
   color: $color;
-  border: 1px solid lighten($color, 20%);
-  background: lighten($color, 60%);
+  width: 100%;
+  max-width: 100%;
+  display: inline-block;
+  margin: 0;
+  background-color: #F4D1C4;
 }
 
